# capture-file-c

./: README.md  deps.toml
src/: .gitignore  CMakeLists.txt  game.swamp-capture
src/examples/: main.c
src/include/swamp-capture-file/: in_capture.h  out_capture.h
src/lib/: in_capture.c  out_capture.c
